--- a/scripts/thai_data_fetcher.ipynb
+++ b/scripts/thai_data_fetcher.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 181,
    "id": "ebdc6804",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 182,
    "id": "ce69b1b0",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 183,
    "id": "63afba50",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 184,
    "id": "117b26f1",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 185,
    "id": "826dae68",
    "metadata": {},
    "outputs": [
@@ -208,16 +208,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2231\n",
-      "2531\n"
+      "2249\n",
+      "2527\n"
      ]
     }
    ],
    "source": [
     "\"\"\"read from existing .json formats\n",
     "uncovered, \n",
-    "2231\n",
-    "2531\n",
+    "2249\n",
+    "2527\n",
     "\"\"\"\n",
     "with open(path+source_file, \"r\") as path_in:\n",
     "    vocab = json.loads(path_in.read())\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 186,
    "id": "004a939d",
    "metadata": {},
    "outputs": [
@@ -299,17 +299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 187,
    "id": "411c6c9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1321"
+       "1340"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 188,
    "id": "bb6ee0f7",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "percent all known= 0.16907216494845362\n"
+      "percent all known= 0.16844349680170576\n"
      ]
     }
    ],
@@ -359,35 +359,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 189,
    "id": "1fa348ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['เมื่อถามว่าเป็นรัฐมนตรี แล้วยังทำหน้าที่ส.ส.เหมือนเดิมใช่หรือไม่ ',\n",
-       " 'และที่เป็นห่วงว่าถ้ามีส.ส.ลาออกจนประชุมไม่ครบนั้น ',\n",
-       " 'ขอย้ำว่าตนไม่เคยไปไหนและอยู่กับนายกฯมาตลอด ',\n",
-       " 'เพราะหลายพื้นที่สถานการณ์ต่างๆเริ่มดีขึ้น ',\n",
-       " 'เมื่อถามว่านายกฯเคยพูดเรื่องนี้หรือไม่ ',\n",
-       " 'ไม่แน่ใจ แต่ไม่ว่างานตรงไหนก็ทำได้ ',\n",
-       " 'คนที่ 1 จะย้ายกลับมาพรรคเพื่อไทย ',\n",
-       " 'อันนี้เป็นสิ่งที่ยังไม่เกิดขึ้น ',\n",
-       " 'อดีตรองนายกรัฐมนตรี สมัยรัฐบาล ',\n",
-       " 'ในฐานะรองประธานสภาผู้แทนราษฎร ',\n",
-       " 'โดยนายกฯได้แนะนำการทำงานตลอด ',\n",
-       " 'เดินทางมาเข้าร่วมให้กำลังใจ ',\n",
-       " 'เมื่อถามว่า ได้คุยกับนายกฯ ',\n",
-       " 'เพราะนายกฯบอกแล้วยังมีเวลา ',\n",
-       " 'ส่วนเรื่องการดูเสียงในสภา ',\n",
-       " 'รองหัวหน้าพรรคไทยรักไทย ',\n",
-       " 'มีผลงานเกิดขึ้นมาก ',\n",
-       " 'ไม่รีบตัดสินใจ ',\n",
-       " 'Dec 2, 2022 ( ']"
+       "['นั่นคือสิ่งที่ตนตั้งใจทำงานในวันนี้โดยความร่วมมือของรัฐบาล ',\n",
+       " 'วันนี้เราทำงานเพื่อประชาชนเพื่อประเทศชาติ ',\n",
+       " 'เพื่อให้เกิดความอิสระต่อการประกอบกิจการ ',\n",
+       " 'เจ้าของผลงาน Arnold is a model student. ',\n",
+       " 'กล่าวตอนหนึ่งว่า เราจะทำให้ดีขึ้นดีขึ้น ',\n",
+       " 'วันที่ 2 ธ.ค. 2565 ที่พรรคเพื่อไทย ',\n",
+       " 'ตนอยากเห็นคนไทยดูหนังไทยมากขึ้น ',\n",
+       " 'ทั้งนี้\\xa0ข้อเรียกร้องทั้ง 4 ข้อ ',\n",
+       " 'ก็จะต้องมีการสนับสนุนจากผู้ชม ',\n",
+       " 'เพียงหลัก 100 ล้านเท่านั้น ',\n",
+       " 'หนึ่งในนั้นคือ Blue Again ',\n",
+       " 'ในช่วงท้าย พล.อ.ประยุทธ์ ',\n",
+       " 'นี่คือหลักการของรัฐบาล ',\n",
+       " 'ซึ่งถือว่ามากพอสมควร ',\n",
+       " '1.ขอให้พรรคเพื่อไทย ',\n",
+       " 'ชี้หากแก้ไข ',\n",
+       " 'มี 1 คน ']"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,17 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 190,
    "id": "1ee450fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1340"
+       "1357"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 191,
    "id": "2d6948c1",
    "metadata": {},
    "outputs": [
@@ -449,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22\n"
+      "23\n"
      ]
     }
    ],
