--- a/scripts/thai_data_fetcher.ipynb
+++ b/scripts/thai_data_fetcher.ipynb
@@ -359,33 +359,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 197,
    "id": "1fa348ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['นั่นคือสิ่งที่ตนตั้งใจทำงานในวันนี้โดยความร่วมมือของรัฐบาล ',\n",
-       " 'วันนี้เราทำงานเพื่อประชาชนเพื่อประเทศชาติ ',\n",
-       " 'เพื่อให้เกิดความอิสระต่อการประกอบกิจการ ',\n",
-       " 'เจ้าของผลงาน Arnold is a model student. ',\n",
-       " 'กล่าวตอนหนึ่งว่า เราจะทำให้ดีขึ้นดีขึ้น ',\n",
-       " 'วันที่ 2 ธ.ค. 2565 ที่พรรคเพื่อไทย ',\n",
-       " 'ตนอยากเห็นคนไทยดูหนังไทยมากขึ้น ',\n",
-       " 'ทั้งนี้\\xa0ข้อเรียกร้องทั้ง 4 ข้อ ',\n",
-       " 'ก็จะต้องมีการสนับสนุนจากผู้ชม ',\n",
-       " 'เพียงหลัก 100 ล้านเท่านั้น ',\n",
-       " 'หนึ่งในนั้นคือ Blue Again ',\n",
-       " 'ในช่วงท้าย พล.อ.ประยุทธ์ ',\n",
-       " 'นี่คือหลักการของรัฐบาล ',\n",
-       " 'ซึ่งถือว่ามากพอสมควร ',\n",
-       " '1.ขอให้พรรคเพื่อไทย ',\n",
-       " 'ชี้หากแก้ไข ',\n",
-       " 'มี 1 คน ']"
+       "['ป้องกันสถานะที่ใครมือยาวสาวได้สาวเอา เข้าสู่อำนาจเพื่อพัฒนาฐานเสียงของตัวเอง ',\n",
+       " 'ประธานการประชุมย้ำว่า ตนทราบเรื่องนี้แล้ว แต่เรื่องภายนอกสภาฯ ',\n",
+       " 'ไม่ใช่ในฐานะ ส.ส. หรือรองประธานสภาฯ “ในเมื่อตัวผมได้พูดออกไป ',\n",
+       " 'และจะมารับเธอกับลูกไปอังกฤษ แต่ภายในเวลาไม่ถึงหนึ่งปี ',\n",
+       " 'เขาก็คงจะได้คุยกับพ่อจริง ๆ เสียที \"ถ้าได้เจอหน้า ',\n",
+       " 'ช่วยกันตามสมาชิกมา เพราะขาดอีกเพียง 6 คนเท่านั้น ',\n",
+       " 'เมื่อเวลา 15.00 น. วันที่ 7 ธ.ค. 2565 ที่รัฐสภา ',\n",
+       " 'เมื่อถามแม่ก็ได้แต่คำตอบที่ว่า \"มันตายไปแล้ว ',\n",
+       " 'แต่ทั้งหมดนี้เป็นสิ่งที่เขาเองต้องพิสูจน์ ',\n",
+       " 'และรู้ว่าพ่อมีลูกสาวสองคนก่อนที่จะมีเขา ',\n",
+       " 'อีกทั้ง ส.ส. มีหน้าที่เป็นผู้แทนประชาชน ',\n",
+       " 'ตรวจสอบรัฐบาล และผ่านกฎหมายที่ก้าวหน้า ',\n",
+       " 'วันที่ 7 ธันวาคม 2565 ที่รัฐสภา ',\n",
+       " 'ดังนั้นในการประชุมสัปดาห์ต่อไป ',\n",
+       " '\"แม่พูดแต่เรื่องเสีย ๆ ของพ่อ ',\n",
+       " 'ซึ่งต้องดำเนินการไปตามกฎหมาย ',\n",
+       " 'วันที่ 7 ธ.ค. 2565 ที่รัฐสภา ',\n",
+       " 'เนื่องจากให้เวลาพอสมควรแล้ว ',\n",
+       " '“เร็วๆ นี้คงมีการเลือกตั้ง ',\n",
+       " 'เนื่องจากตำแหน่งรองประธานฯ ',\n",
+       " 'คราวที่แล้วก็รีบปิดไปที ',\n",
+       " 'และสามีคนปัจจุบันต่อไป ',\n",
+       " 'ไม่ได้ Dec 7, 2022 ( ',\n",
+       " 'เพราะมันไม่รับผิดชอบ ',\n",
+       " 'ประธานสภาผู้แทนราษฎร ',\n",
+       " 'เล่าว่าได้งานทำแล้ว ',\n",
+       " '\"ถามไปก็เท่านั้น ',\n",
+       " 'ไม่มีเรื่องดีเลย ',\n",
+       " 'อย่าเพิ่งรีบปิด ',\n",
+       " 'จากการลงพื้นที่ ',\n",
+       " 'ขณะที่ส่วนกลาง ',\n",
+       " 'หลังรู้จักกัน ',\n",
+       " 'มันตายไปแล้ว\" ',\n",
+       " 'และมาตรฐานสูง ',\n",
+       " 'สั่งปิดทันที ',\n",
+       " 'ทั้งมีคุณภาพ ',\n",
+       " 'ยังไงก็ไม่มา ',\n",
+       " 'เพื่อให้สภาฯ ',\n",
+       " 'ซึ่งในตอนนี้ ',\n",
+       " 'ภายใน 4 ปี ',\n",
+       " 'ไม่สำเร็จ ',\n",
+       " 'รับไม้ต่อ ',\n",
+       " 'ประธานฯ ',\n",
+       " 'คุณภาพ ']"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,17 +439,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 198,
    "id": "1ee450fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1357"
+       "1401"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 199,
    "id": "2d6948c1",
    "metadata": {},
    "outputs": [
@@ -462,46 +489,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 200,
    "id": "2a643828",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3,\n",
-       "  88.4963768115942,\n",
-       "  '‘ลิณธิภรณ์’บี้ กกต.อย่าสองมาต',\n",
-       "  'https://www.voicetv.co.th/read/_fk3baC4T'),\n",
-       " (1,\n",
-       "  86.50190114068441,\n",
-       "  'รัฐบาลตั้งเป้าปี 68 ไทยปลอดโร',\n",
-       "  'https://www.voicetv.co.th/read/Ns0mCPA4_'),\n",
-       " (0,\n",
-       "  85.03578399479505,\n",
-       "  \"'มดดำ' ร่วมงานเปิดตัวว่าที่ ส\",\n",
-       "  'https://www.bbc.com/thai/thailand-63662204'),\n",
-       " (2,\n",
-       "  83.43558282208589,\n",
-       "  \"'ธนกร' ปัด 'ตู่' ตบรางวัลนั่ง\",\n",
-       "  'https://www.voicetv.co.th/read/zONKJLbFK'),\n",
+       "[(1,\n",
+       "  88.47305389221557,\n",
+       "  'สภาล่มอีก! ‘จุรินทร์’ พลาดกดบ',\n",
+       "  'https://www.voicetv.co.th/read/vG331zJe0'),\n",
        " (4,\n",
-       "  83.24468085106382,\n",
+       "  86.72014260249554,\n",
        "  '‘ประยุทธ์’ อวยพรปีใหม่สื่อทำเ',\n",
-       "  'https://www.voicetv.co.th/read/H7Q1L4eAI'),\n",
+       "  'https://www.voicetv.co.th/read/uUmpmpKoV'),\n",
+       " (0,\n",
+       "  85.23316062176166,\n",
+       "  \"'ประยุทธ์' ปลื้ม 10 เดือน ไทย\",\n",
+       "  'https://www.bbc.com/thai/thailand-63823292'),\n",
+       " (3,\n",
+       "  84.63636363636364,\n",
+       "  \"'ก้าวหน้า-ก้าวไกล' แถลงเสียดา\",\n",
+       "  'https://www.voicetv.co.th/read/emGDEyN7F'),\n",
+       " (2,\n",
+       "  84.04858299595142,\n",
+       "  \"'ศุภชัย' ขอโทษ ส.ส.เพื่อไทยกล\",\n",
+       "  'https://www.voicetv.co.th/read/K5cqj_Xsn'),\n",
        " (5,\n",
-       "  81.50087260034904,\n",
+       "  81.67539267015707,\n",
        "  '‘วิษณุ’แย้มประตูยุบสภาเปิดอยู',\n",
        "  'https://www.voicetv.co.th/read/bn95YMr0a'),\n",
        " (7,\n",
-       "  80.81123244929798,\n",
+       "  80.90483619344774,\n",
        "  'จับตา ‘ราษฎรแรลลี่’ จาก ‘วังล',\n",
        "  'https://www.voicetv.co.th/read/rI-9LjhEh')]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
