started using youtube api for chinese

--- a/scripts/french_dad_data_fetcher.ipynb
+++ b/scripts/french_dad_data_fetcher.ipynb
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e9bd6920",
    "metadata": {},
    "outputs": [
@@ -2081,7 +2081,11 @@
       "\n",
       "options : k,m,a,q,s,cq\n",
       "Manifestations en Iran : \"Le point de bascule n’a pas été atteint mais il n’est pas loin\"              Sur le même sujet                08/12/2022 Cisjordanie : trois Palestiniens tués par l'armée israélienne dans le camp de Jénine                 07/12/2022 Le président Xi Jinping en Arabie saoudite pour sceller un rapprochement sino-arabe                 07/12/2022 Meurtre de Jamal Khashoggi : une plainte contre MBS classée sans suite aux États-Unis                 06/12/2022 Manifestations en Iran : cinq personnes condamnées à la pendaison                 06/12/2022 Mort de Shirin Abu Akleh : Al-Jazira annonce avoir soumis l'affaire au procureur de la CPI                 05/12/2022 Iran : des commerces ferment après l'appel des manifestants à une grève générale                 03/12/2022 En Iran, les autorités avancent un bilan de 200 morts depuis le début des émeutes                 02/12/2022 Proche-Orient : la police israélienne abat un Palestinien en Cisjordanie                 02/12/2022 En Syrie, les FDS interrompent leur coopération avec la coalition après des frappes turques                 01/12/2022 Syrie : Moscou déploie, pour la première fois, des renforts dans une zone contrôlée par des Kurdes                                 La une         Replay            Replay                  Direct                 Actualités            Actualités                   Menu            Menu                  Page non trouvée      Le contenu auquel vous tentez d'accéder n'existe pas ou n'est plus disponible.\n",
-      "\n"
+      "\n",
+      "options : k,m,a,q,s,cq\n",
+      "Publicité         Le sommet de l'ONU sur la biodiversité s'est ouvert mercredi à Montréal avec un défi colossal : tenter en moins de deux semaines de sceller un accord historique, \"dernière chance\" de sauver les espèces et les milieux naturels d'une destruction irréversible.\n",
+      "\n",
+      "options : k,m,a,q,s,cq\n"
      ]
     }
    ],
@@ -2104,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 21,
    "id": "b4366fbd",
    "metadata": {},
    "outputs": [],
@@ -2118,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 22,
    "id": "75667e05",
    "metadata": {},
    "outputs": [
