--- a/scripts/chinese_data_fetcher.ipynb
+++ b/scripts/chinese_data_fetcher.ipynb
@@ -38,10 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "id": "ebdc6804",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using state Washington server backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import bs4, requests, sys, codecs, urllib.request, re\n",
     "from bs4 import SoupStrainer\n",
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "id": "595f5cb0",
    "metadata": {},
    "outputs": [],
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 3,
    "id": "ce69b1b0",
    "metadata": {},
    "outputs": [],
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "id": "71f57da8",
    "metadata": {},
    "outputs": [],
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 5,
    "id": "928c99a3",
    "metadata": {},
    "outputs": [],
@@ -223,16 +231,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7e23e8a5",
-   "metadata": {},
-   "source": [
-    "#News: NYTimes"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 6,
    "id": "2ccb84a4",
    "metadata": {},
    "outputs": [
@@ -265,6 +265,441 @@
     "        uncovered.append(word)\n",
     "print(len(uncovered))\n",
     "print(len(vocab['white_listed']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e05aca0e",
+   "metadata": {},
+   "source": [
+    "**Youtube comments**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a2e65ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from googleapiclient.discovery import build\n",
+    "\n",
+    "#Get comments\n",
+    "\n",
+    "api_key = \"AIzaSyCXD63CDFqA-f4D_bxagkLDRr3-FJc_pn0\"\n",
+    "  \n",
+    "def video_comments(video_id,size):\n",
+    "    \n",
+    "    # empty list for storing reply\n",
+    "    replies = []\n",
+    "    output = []\n",
+    "  \n",
+    "    # creating youtube resource object\n",
+    "    youtube = build('youtube', 'v3',\n",
+    "                    developerKey=api_key)\n",
+    "  \n",
+    "    # retrieve youtube video results\n",
+    "    video_response=youtube.commentThreads().list(\n",
+    "    part='snippet,replies',\n",
+    "    videoId=video_id\n",
+    "    ).execute()\n",
+    "  \n",
+    "    counter=0\n",
+    "    # iterate video response\n",
+    "    while video_response and counter<=size:\n",
+    "        \n",
+    "        # extracting required info\n",
+    "        # from each result object \n",
+    "        for item in video_response['items']:\n",
+    "            counter +=1\n",
+    "            if counter<=size:\n",
+    "            # Extracting comments\n",
+    "                comment = item['snippet']['topLevelComment']['snippet']['textDisplay']\n",
+    "\n",
+    "                # counting number of reply of comment\n",
+    "                replycount = item['snippet']['totalReplyCount']\n",
+    "\n",
+    "                # if reply is there\n",
+    "                if replycount>0:\n",
+    "\n",
+    "                    # iterate through all reply\n",
+    "                    for reply in item['replies']['comments']:\n",
+    "\n",
+    "                        # Extract reply\n",
+    "                        reply = reply['snippet']['textDisplay']\n",
+    "\n",
+    "                        # Store reply is list\n",
+    "                        replies.append(reply)\n",
+    "\n",
+    "                # print comment with list of reply\n",
+    "                output.append((comment, replies)) #, end = '\\n\\n'\n",
+    "\n",
+    "                # empty reply list\n",
+    "                replies = []\n",
+    "\n",
+    "            # Again repeat\n",
+    "            if 'nextPageToken' in video_response:\n",
+    "                video_response = youtube.commentThreads().list(\n",
+    "                        part = 'snippet,replies',\n",
+    "                        videoId = video_id\n",
+    "                    ).execute()\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "    return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1b8b2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrieve youtube video results\n",
+    "video_id = \"Bmynu45SQRM\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b3a52502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call function\n",
+    "test_comments = video_comments(video_id,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "668b6a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "('联系王局请发邮件：WangjuBGSH@gmail.com和lianxiwangju@gmail.com。欢迎爆料，欢迎提供新闻线索。新闻投稿，最需要讲自己的亲历，自己了解的信息，或者自己知道的事情的某个局部信息，都可以。如果发来视频，音频，最好能有说明，比如什么地方，什么人，是么时候，因为什么原因，等等。多谢。', ['哪都挺好，能不能把咂嘴控制一下。', '方舱遗址(๑•̀ㅁ•́ฅ)', '@sea lee 你很天真。可以和我儿子看一本书了。', '@訛没派掌門 路大脑袋是郭骗的工具，呵呵', '@陳松伯 路德那边早说了 他是大外宣'])\n",
+      "\n",
+      "2\n",
+      "('如果片面地说。一个有权威的人说错了话，是需要有人打圆场的。只不过人民给了台阶，上面也需要台阶。这反而是共赢。', [])\n",
+      "\n",
+      "3\n",
+      "('感谢各位的勇气，让我们过上正常的生活，感谢', [])\n",
+      "\n",
+      "4\n",
+      "('看到微博一大堆感謝政府國情放鬆疫情管控，學生開心可以提早放假🙂但是大部分人都不知道他們為什麼可以解封，是誰為他們爭取這一份簡單的自由，真心替那群學生不值，中國真的沒救了', [])\n",
+      "\n",
+      "5\n",
+      "('发明了火药,却割地赔款,<br>发明了印刷,却封禁文字,<br>发明了造纸,却害怕白纸,<br>发明了司南,却禁止出国!', [])\n",
+      "\n",
+      "6\n",
+      "('唉，一下子不知道该说啥好了', [])\n",
+      "\n",
+      "7\n",
+      "('真的吗？<br>难得的好消息。<br>那些有勇气的大学生，和敢跟邪政说不的正义国人所换来的。<br>致敬！<br>王局辛苦了。', [])\n",
+      "\n",
+      "8\n",
+      "('场所码也取消了', [])\n",
+      "\n",
+      "9\n",
+      "('防疫政策放开了， 我们这也清零了', [])\n",
+      "\n",
+      "10\n",
+      "('反中医都那么反智的吗？连花清瘟亲测比普通感冒药好多了一包见效立竿见影好嘛，越来越觉得你在国内过不下去是被西方洗脑洗过头了', ['@ci cel2 呃呃，有没有一种可能你也是中国人？🤣', '请你遵守你国法律不要使用非法软件上国外非法网站'])\n",
+      "\n",
+      "11\n",
+      "('王局啊 有个问题很严重 就是：现在突然这么一整，回社区也不需要报备了，得了新馆社区也管不了了，这样以来那些社区里的小芝麻官感觉没有权威了 透明人了。😂 请王局给这帮腿子做一期节目，让他们不要忧虑，一心向前不要跳楼啊。😅', [])\n",
+      "\n",
+      "12\n",
+      "('FZ的嘴脸', [])\n",
+      "\n",
+      "13\n",
+      "('有一说一，感谢那些勇于抗争的学生们才换来了解控。', [])\n",
+      "\n",
+      "14\n",
+      "('过去在中央台看王局节目一张扑克脸，问问题都是小心翼翼，更别说发表意见了。如今终于能够口若悬河滔滔不绝了，自由把鬼变成了人，是什么把人变成了鬼？不言自明。', [])\n",
+      "\n",
+      "15\n",
+      "('刚刚看完您在美国之音的访谈。<br>有些肺腑之言，其实没什么营养，<br>可还是想说，如果您能看的见的话<br>首先常年呆在美国大环境潜移默化对自身还是有很大影响的，加上对国内客观上越来越接触的少，有变成89反华那帮人的风险。<br>因为自身遭遇很难不带个人情感，既然是以是做专业的媒体态度来做这些节目的，还是要合理客观，也不要太低估年轻人的自主意识，作为年轻人，翻墙是常态，我身边不翻墙的反倒是少数。<br>看着文昭，王丹之流可笑又可悲的言论。还是很希望您能秉持初心，好几千万甚至上亿常态翻墙的年轻人才是您的基础观众。<br>诚心祝愿国家健康 富强 昌盛，也诚心祝您健康，愉快，节目越做越好。', ['美国之音大部分节目个人是嗤之以鼻的，但偶尔也会看。'])\n",
+      "\n",
+      "16\n",
+      "('一句话，王局客观，客观，还是tm的客观，在外网是一股清流，正确的，关注就完了', [])\n",
+      "\n",
+      "17\n",
+      "('閃電五連鞭神基罷.\\r<br>互相讒身子的是酒肉朋友，互相讒靈魂的是鴉片朋友。\\r<br>互相學美學的是君子朋友、和善之友。酒肉朋友和鴉片朋友結婚得幾率較高。\\r<br>而君子朋友結婚的就極少了。\\r<br>為什麼說君子都註孤生啊，就是因為君子行為結婚率比較低。\\r<br>但是君子朋友活的最輕松。不被思想禁錮，不被精神控製，也不被下半身控製，\\r<br>也不是下半身思考的動物。\\r<br>君子越來越少，小人越來越多，所以君子的婚緣也稀少起來了。\\r<br>時也，命也，勢也', [])\n",
+      "\n",
+      "18\n",
+      "('王局的观点相当客观了，理性思考不带情绪，基于同胞集体利益考虑，真正地在为中国的普罗大众发声。', [])\n",
+      "\n",
+      "19\n",
+      "('王局你好，广州当局终于做了正确决定：最大开放最小影响民众抗疫政策。', [])\n",
+      "\n",
+      "20\n",
+      "('先放寬封控，然後把感染新冠的數據暴增，再然後以此為由重新封控，比之前的封控更嚴。——這就是他們的策略。不信請拭目以待。', [])\n",
+      "\n",
+      "21\n",
+      "('联系王局请发邮件：WangjuBGSH@gmail.com和lianxiwangju@gmail.com。欢迎爆料，欢迎提供新闻线索。新闻投稿，最需要讲自己的亲历，自己了解的信息，或者自己知道的事情的某个局部信息，都可以。如果发来视频，音频，最好能有说明，比如什么地方，什么人，是么时候，因为什么原因，等等。多谢。', ['哪都挺好，能不能把咂嘴控制一下。', '方舱遗址(๑•̀ㅁ•́ฅ)', '@sea lee 你很天真。可以和我儿子看一本书了。', '@訛没派掌門 路大脑袋是郭骗的工具，呵呵', '@陳松伯 路德那边早说了 他是大外宣'])\n",
+      "\n",
+      "22\n",
+      "('如果片面地说。一个有权威的人说错了话，是需要有人打圆场的。只不过人民给了台阶，上面也需要台阶。这反而是共赢。', [])\n",
+      "\n",
+      "23\n",
+      "('感谢各位的勇气，让我们过上正常的生活，感谢', [])\n",
+      "\n",
+      "24\n",
+      "('看到微博一大堆感謝政府國情放鬆疫情管控，學生開心可以提早放假🙂但是大部分人都不知道他們為什麼可以解封，是誰為他們爭取這一份簡單的自由，真心替那群學生不值，中國真的沒救了', [])\n",
+      "\n",
+      "25\n",
+      "('发明了火药,却割地赔款,<br>发明了印刷,却封禁文字,<br>发明了造纸,却害怕白纸,<br>发明了司南,却禁止出国!', [])\n",
+      "\n",
+      "26\n",
+      "('唉，一下子不知道该说啥好了', [])\n",
+      "\n",
+      "27\n",
+      "('真的吗？<br>难得的好消息。<br>那些有勇气的大学生，和敢跟邪政说不的正义国人所换来的。<br>致敬！<br>王局辛苦了。', [])\n",
+      "\n",
+      "28\n",
+      "('场所码也取消了', [])\n",
+      "\n",
+      "29\n",
+      "('防疫政策放开了， 我们这也清零了', [])\n",
+      "\n",
+      "30\n",
+      "('反中医都那么反智的吗？连花清瘟亲测比普通感冒药好多了一包见效立竿见影好嘛，越来越觉得你在国内过不下去是被西方洗脑洗过头了', ['@ci cel2 呃呃，有没有一种可能你也是中国人？🤣', '请你遵守你国法律不要使用非法软件上国外非法网站'])\n",
+      "\n",
+      "31\n",
+      "('王局啊 有个问题很严重 就是：现在突然这么一整，回社区也不需要报备了，得了新馆社区也管不了了，这样以来那些社区里的小芝麻官感觉没有权威了 透明人了。😂 请王局给这帮腿子做一期节目，让他们不要忧虑，一心向前不要跳楼啊。😅', [])\n",
+      "\n",
+      "32\n",
+      "('FZ的嘴脸', [])\n",
+      "\n",
+      "33\n",
+      "('有一说一，感谢那些勇于抗争的学生们才换来了解控。', [])\n",
+      "\n",
+      "34\n",
+      "('过去在中央台看王局节目一张扑克脸，问问题都是小心翼翼，更别说发表意见了。如今终于能够口若悬河滔滔不绝了，自由把鬼变成了人，是什么把人变成了鬼？不言自明。', [])\n",
+      "\n",
+      "35\n",
+      "('刚刚看完您在美国之音的访谈。<br>有些肺腑之言，其实没什么营养，<br>可还是想说，如果您能看的见的话<br>首先常年呆在美国大环境潜移默化对自身还是有很大影响的，加上对国内客观上越来越接触的少，有变成89反华那帮人的风险。<br>因为自身遭遇很难不带个人情感，既然是以是做专业的媒体态度来做这些节目的，还是要合理客观，也不要太低估年轻人的自主意识，作为年轻人，翻墙是常态，我身边不翻墙的反倒是少数。<br>看着文昭，王丹之流可笑又可悲的言论。还是很希望您能秉持初心，好几千万甚至上亿常态翻墙的年轻人才是您的基础观众。<br>诚心祝愿国家健康 富强 昌盛，也诚心祝您健康，愉快，节目越做越好。', ['美国之音大部分节目个人是嗤之以鼻的，但偶尔也会看。'])\n",
+      "\n",
+      "36\n",
+      "('一句话，王局客观，客观，还是tm的客观，在外网是一股清流，正确的，关注就完了', [])\n",
+      "\n",
+      "37\n",
+      "('閃電五連鞭神基罷.\\r<br>互相讒身子的是酒肉朋友，互相讒靈魂的是鴉片朋友。\\r<br>互相學美學的是君子朋友、和善之友。酒肉朋友和鴉片朋友結婚得幾率較高。\\r<br>而君子朋友結婚的就極少了。\\r<br>為什麼說君子都註孤生啊，就是因為君子行為結婚率比較低。\\r<br>但是君子朋友活的最輕松。不被思想禁錮，不被精神控製，也不被下半身控製，\\r<br>也不是下半身思考的動物。\\r<br>君子越來越少，小人越來越多，所以君子的婚緣也稀少起來了。\\r<br>時也，命也，勢也', [])\n",
+      "\n",
+      "38\n",
+      "('王局的观点相当客观了，理性思考不带情绪，基于同胞集体利益考虑，真正地在为中国的普罗大众发声。', [])\n",
+      "\n",
+      "39\n",
+      "('王局你好，广州当局终于做了正确决定：最大开放最小影响民众抗疫政策。', [])\n",
+      "\n",
+      "40\n",
+      "('先放寬封控，然後把感染新冠的數據暴增，再然後以此為由重新封控，比之前的封控更嚴。——這就是他們的策略。不信請拭目以待。', [])\n",
+      "\n",
+      "41\n",
+      "('联系王局请发邮件：WangjuBGSH@gmail.com和lianxiwangju@gmail.com。欢迎爆料，欢迎提供新闻线索。新闻投稿，最需要讲自己的亲历，自己了解的信息，或者自己知道的事情的某个局部信息，都可以。如果发来视频，音频，最好能有说明，比如什么地方，什么人，是么时候，因为什么原因，等等。多谢。', ['哪都挺好，能不能把咂嘴控制一下。', '方舱遗址(๑•̀ㅁ•́ฅ)', '@sea lee 你很天真。可以和我儿子看一本书了。', '@訛没派掌門 路大脑袋是郭骗的工具，呵呵', '@陳松伯 路德那边早说了 他是大外宣'])\n",
+      "\n",
+      "42\n",
+      "('如果片面地说。一个有权威的人说错了话，是需要有人打圆场的。只不过人民给了台阶，上面也需要台阶。这反而是共赢。', [])\n",
+      "\n",
+      "43\n",
+      "('感谢各位的勇气，让我们过上正常的生活，感谢', [])\n",
+      "\n",
+      "44\n",
+      "('看到微博一大堆感謝政府國情放鬆疫情管控，學生開心可以提早放假🙂但是大部分人都不知道他們為什麼可以解封，是誰為他們爭取這一份簡單的自由，真心替那群學生不值，中國真的沒救了', [])\n",
+      "\n",
+      "45\n",
+      "('发明了火药,却割地赔款,<br>发明了印刷,却封禁文字,<br>发明了造纸,却害怕白纸,<br>发明了司南,却禁止出国!', [])\n",
+      "\n",
+      "46\n",
+      "('唉，一下子不知道该说啥好了', [])\n",
+      "\n",
+      "47\n",
+      "('真的吗？<br>难得的好消息。<br>那些有勇气的大学生，和敢跟邪政说不的正义国人所换来的。<br>致敬！<br>王局辛苦了。', [])\n",
+      "\n",
+      "48\n",
+      "('场所码也取消了', [])\n",
+      "\n",
+      "49\n",
+      "('防疫政策放开了， 我们这也清零了', [])\n",
+      "\n",
+      "50\n",
+      "('反中医都那么反智的吗？连花清瘟亲测比普通感冒药好多了一包见效立竿见影好嘛，越来越觉得你在国内过不下去是被西方洗脑洗过头了', ['@ci cel2 呃呃，有没有一种可能你也是中国人？🤣', '请你遵守你国法律不要使用非法软件上国外非法网站'])\n",
+      "\n",
+      "51\n",
+      "('王局啊 有个问题很严重 就是：现在突然这么一整，回社区也不需要报备了，得了新馆社区也管不了了，这样以来那些社区里的小芝麻官感觉没有权威了 透明人了。😂 请王局给这帮腿子做一期节目，让他们不要忧虑，一心向前不要跳楼啊。😅', [])\n",
+      "\n",
+      "52\n",
+      "('FZ的嘴脸', [])\n",
+      "\n",
+      "53\n",
+      "('有一说一，感谢那些勇于抗争的学生们才换来了解控。', [])\n",
+      "\n",
+      "54\n",
+      "('过去在中央台看王局节目一张扑克脸，问问题都是小心翼翼，更别说发表意见了。如今终于能够口若悬河滔滔不绝了，自由把鬼变成了人，是什么把人变成了鬼？不言自明。', [])\n",
+      "\n",
+      "55\n",
+      "('刚刚看完您在美国之音的访谈。<br>有些肺腑之言，其实没什么营养，<br>可还是想说，如果您能看的见的话<br>首先常年呆在美国大环境潜移默化对自身还是有很大影响的，加上对国内客观上越来越接触的少，有变成89反华那帮人的风险。<br>因为自身遭遇很难不带个人情感，既然是以是做专业的媒体态度来做这些节目的，还是要合理客观，也不要太低估年轻人的自主意识，作为年轻人，翻墙是常态，我身边不翻墙的反倒是少数。<br>看着文昭，王丹之流可笑又可悲的言论。还是很希望您能秉持初心，好几千万甚至上亿常态翻墙的年轻人才是您的基础观众。<br>诚心祝愿国家健康 富强 昌盛，也诚心祝您健康，愉快，节目越做越好。', ['美国之音大部分节目个人是嗤之以鼻的，但偶尔也会看。'])\n",
+      "\n",
+      "56\n",
+      "('一句话，王局客观，客观，还是tm的客观，在外网是一股清流，正确的，关注就完了', [])\n",
+      "\n",
+      "57\n",
+      "('閃電五連鞭神基罷.\\r<br>互相讒身子的是酒肉朋友，互相讒靈魂的是鴉片朋友。\\r<br>互相學美學的是君子朋友、和善之友。酒肉朋友和鴉片朋友結婚得幾率較高。\\r<br>而君子朋友結婚的就極少了。\\r<br>為什麼說君子都註孤生啊，就是因為君子行為結婚率比較低。\\r<br>但是君子朋友活的最輕松。不被思想禁錮，不被精神控製，也不被下半身控製，\\r<br>也不是下半身思考的動物。\\r<br>君子越來越少，小人越來越多，所以君子的婚緣也稀少起來了。\\r<br>時也，命也，勢也', [])\n",
+      "\n",
+      "58\n",
+      "('王局的观点相当客观了，理性思考不带情绪，基于同胞集体利益考虑，真正地在为中国的普罗大众发声。', [])\n",
+      "\n",
+      "59\n",
+      "('王局你好，广州当局终于做了正确决定：最大开放最小影响民众抗疫政策。', [])\n",
+      "\n",
+      "60\n",
+      "('先放寬封控，然後把感染新冠的數據暴增，再然後以此為由重新封控，比之前的封控更嚴。——這就是他們的策略。不信請拭目以待。', [])\n",
+      "\n",
+      "61\n",
+      "('联系王局请发邮件：WangjuBGSH@gmail.com和lianxiwangju@gmail.com。欢迎爆料，欢迎提供新闻线索。新闻投稿，最需要讲自己的亲历，自己了解的信息，或者自己知道的事情的某个局部信息，都可以。如果发来视频，音频，最好能有说明，比如什么地方，什么人，是么时候，因为什么原因，等等。多谢。', ['哪都挺好，能不能把咂嘴控制一下。', '方舱遗址(๑•̀ㅁ•́ฅ)', '@sea lee 你很天真。可以和我儿子看一本书了。', '@訛没派掌門 路大脑袋是郭骗的工具，呵呵', '@陳松伯 路德那边早说了 他是大外宣'])\n",
+      "\n",
+      "62\n",
+      "('如果片面地说。一个有权威的人说错了话，是需要有人打圆场的。只不过人民给了台阶，上面也需要台阶。这反而是共赢。', [])\n",
+      "\n",
+      "63\n",
+      "('感谢各位的勇气，让我们过上正常的生活，感谢', [])\n",
+      "\n",
+      "64\n",
+      "('看到微博一大堆感謝政府國情放鬆疫情管控，學生開心可以提早放假🙂但是大部分人都不知道他們為什麼可以解封，是誰為他們爭取這一份簡單的自由，真心替那群學生不值，中國真的沒救了', [])\n",
+      "\n",
+      "65\n",
+      "('发明了火药,却割地赔款,<br>发明了印刷,却封禁文字,<br>发明了造纸,却害怕白纸,<br>发明了司南,却禁止出国!', [])\n",
+      "\n",
+      "66\n",
+      "('唉，一下子不知道该说啥好了', [])\n",
+      "\n",
+      "67\n",
+      "('真的吗？<br>难得的好消息。<br>那些有勇气的大学生，和敢跟邪政说不的正义国人所换来的。<br>致敬！<br>王局辛苦了。', [])\n",
+      "\n",
+      "68\n",
+      "('场所码也取消了', [])\n",
+      "\n",
+      "69\n",
+      "('防疫政策放开了， 我们这也清零了', [])\n",
+      "\n",
+      "70\n",
+      "('反中医都那么反智的吗？连花清瘟亲测比普通感冒药好多了一包见效立竿见影好嘛，越来越觉得你在国内过不下去是被西方洗脑洗过头了', ['@ci cel2 呃呃，有没有一种可能你也是中国人？🤣', '请你遵守你国法律不要使用非法软件上国外非法网站'])\n",
+      "\n",
+      "71\n",
+      "('王局啊 有个问题很严重 就是：现在突然这么一整，回社区也不需要报备了，得了新馆社区也管不了了，这样以来那些社区里的小芝麻官感觉没有权威了 透明人了。😂 请王局给这帮腿子做一期节目，让他们不要忧虑，一心向前不要跳楼啊。😅', [])\n",
+      "\n",
+      "72\n",
+      "('FZ的嘴脸', [])\n",
+      "\n",
+      "73\n",
+      "('有一说一，感谢那些勇于抗争的学生们才换来了解控。', [])\n",
+      "\n",
+      "74\n",
+      "('过去在中央台看王局节目一张扑克脸，问问题都是小心翼翼，更别说发表意见了。如今终于能够口若悬河滔滔不绝了，自由把鬼变成了人，是什么把人变成了鬼？不言自明。', [])\n",
+      "\n",
+      "75\n",
+      "('刚刚看完您在美国之音的访谈。<br>有些肺腑之言，其实没什么营养，<br>可还是想说，如果您能看的见的话<br>首先常年呆在美国大环境潜移默化对自身还是有很大影响的，加上对国内客观上越来越接触的少，有变成89反华那帮人的风险。<br>因为自身遭遇很难不带个人情感，既然是以是做专业的媒体态度来做这些节目的，还是要合理客观，也不要太低估年轻人的自主意识，作为年轻人，翻墙是常态，我身边不翻墙的反倒是少数。<br>看着文昭，王丹之流可笑又可悲的言论。还是很希望您能秉持初心，好几千万甚至上亿常态翻墙的年轻人才是您的基础观众。<br>诚心祝愿国家健康 富强 昌盛，也诚心祝您健康，愉快，节目越做越好。', ['美国之音大部分节目个人是嗤之以鼻的，但偶尔也会看。'])\n",
+      "\n",
+      "76\n",
+      "('一句话，王局客观，客观，还是tm的客观，在外网是一股清流，正确的，关注就完了', [])\n",
+      "\n",
+      "77\n",
+      "('閃電五連鞭神基罷.\\r<br>互相讒身子的是酒肉朋友，互相讒靈魂的是鴉片朋友。\\r<br>互相學美學的是君子朋友、和善之友。酒肉朋友和鴉片朋友結婚得幾率較高。\\r<br>而君子朋友結婚的就極少了。\\r<br>為什麼說君子都註孤生啊，就是因為君子行為結婚率比較低。\\r<br>但是君子朋友活的最輕松。不被思想禁錮，不被精神控製，也不被下半身控製，\\r<br>也不是下半身思考的動物。\\r<br>君子越來越少，小人越來越多，所以君子的婚緣也稀少起來了。\\r<br>時也，命也，勢也', [])\n",
+      "\n",
+      "78\n",
+      "('王局的观点相当客观了，理性思考不带情绪，基于同胞集体利益考虑，真正地在为中国的普罗大众发声。', [])\n",
+      "\n",
+      "79\n",
+      "('王局你好，广州当局终于做了正确决定：最大开放最小影响民众抗疫政策。', [])\n",
+      "\n",
+      "80\n",
+      "('先放寬封控，然後把感染新冠的數據暴增，再然後以此為由重新封控，比之前的封控更嚴。——這就是他們的策略。不信請拭目以待。', [])\n",
+      "\n",
+      "81\n",
+      "('联系王局请发邮件：WangjuBGSH@gmail.com和lianxiwangju@gmail.com。欢迎爆料，欢迎提供新闻线索。新闻投稿，最需要讲自己的亲历，自己了解的信息，或者自己知道的事情的某个局部信息，都可以。如果发来视频，音频，最好能有说明，比如什么地方，什么人，是么时候，因为什么原因，等等。多谢。', ['哪都挺好，能不能把咂嘴控制一下。', '方舱遗址(๑•̀ㅁ•́ฅ)', '@sea lee 你很天真。可以和我儿子看一本书了。', '@訛没派掌門 路大脑袋是郭骗的工具，呵呵', '@陳松伯 路德那边早说了 他是大外宣'])\n",
+      "\n",
+      "82\n",
+      "('如果片面地说。一个有权威的人说错了话，是需要有人打圆场的。只不过人民给了台阶，上面也需要台阶。这反而是共赢。', [])\n",
+      "\n",
+      "83\n",
+      "('感谢各位的勇气，让我们过上正常的生活，感谢', [])\n",
+      "\n",
+      "84\n",
+      "('看到微博一大堆感謝政府國情放鬆疫情管控，學生開心可以提早放假🙂但是大部分人都不知道他們為什麼可以解封，是誰為他們爭取這一份簡單的自由，真心替那群學生不值，中國真的沒救了', [])\n",
+      "\n",
+      "85\n",
+      "('发明了火药,却割地赔款,<br>发明了印刷,却封禁文字,<br>发明了造纸,却害怕白纸,<br>发明了司南,却禁止出国!', [])\n",
+      "\n",
+      "86\n",
+      "('唉，一下子不知道该说啥好了', [])\n",
+      "\n",
+      "87\n",
+      "('真的吗？<br>难得的好消息。<br>那些有勇气的大学生，和敢跟邪政说不的正义国人所换来的。<br>致敬！<br>王局辛苦了。', [])\n",
+      "\n",
+      "88\n",
+      "('场所码也取消了', [])\n",
+      "\n",
+      "89\n",
+      "('防疫政策放开了， 我们这也清零了', [])\n",
+      "\n",
+      "90\n",
+      "('反中医都那么反智的吗？连花清瘟亲测比普通感冒药好多了一包见效立竿见影好嘛，越来越觉得你在国内过不下去是被西方洗脑洗过头了', ['@ci cel2 呃呃，有没有一种可能你也是中国人？🤣', '请你遵守你国法律不要使用非法软件上国外非法网站'])\n",
+      "\n",
+      "91\n",
+      "('王局啊 有个问题很严重 就是：现在突然这么一整，回社区也不需要报备了，得了新馆社区也管不了了，这样以来那些社区里的小芝麻官感觉没有权威了 透明人了。😂 请王局给这帮腿子做一期节目，让他们不要忧虑，一心向前不要跳楼啊。😅', [])\n",
+      "\n",
+      "92\n",
+      "('FZ的嘴脸', [])\n",
+      "\n",
+      "93\n",
+      "('有一说一，感谢那些勇于抗争的学生们才换来了解控。', [])\n",
+      "\n",
+      "94\n",
+      "('过去在中央台看王局节目一张扑克脸，问问题都是小心翼翼，更别说发表意见了。如今终于能够口若悬河滔滔不绝了，自由把鬼变成了人，是什么把人变成了鬼？不言自明。', [])\n",
+      "\n",
+      "95\n",
+      "('刚刚看完您在美国之音的访谈。<br>有些肺腑之言，其实没什么营养，<br>可还是想说，如果您能看的见的话<br>首先常年呆在美国大环境潜移默化对自身还是有很大影响的，加上对国内客观上越来越接触的少，有变成89反华那帮人的风险。<br>因为自身遭遇很难不带个人情感，既然是以是做专业的媒体态度来做这些节目的，还是要合理客观，也不要太低估年轻人的自主意识，作为年轻人，翻墙是常态，我身边不翻墙的反倒是少数。<br>看着文昭，王丹之流可笑又可悲的言论。还是很希望您能秉持初心，好几千万甚至上亿常态翻墙的年轻人才是您的基础观众。<br>诚心祝愿国家健康 富强 昌盛，也诚心祝您健康，愉快，节目越做越好。', ['美国之音大部分节目个人是嗤之以鼻的，但偶尔也会看。'])\n",
+      "\n",
+      "96\n",
+      "('一句话，王局客观，客观，还是tm的客观，在外网是一股清流，正确的，关注就完了', [])\n",
+      "\n",
+      "97\n",
+      "('閃電五連鞭神基罷.\\r<br>互相讒身子的是酒肉朋友，互相讒靈魂的是鴉片朋友。\\r<br>互相學美學的是君子朋友、和善之友。酒肉朋友和鴉片朋友結婚得幾率較高。\\r<br>而君子朋友結婚的就極少了。\\r<br>為什麼說君子都註孤生啊，就是因為君子行為結婚率比較低。\\r<br>但是君子朋友活的最輕松。不被思想禁錮，不被精神控製，也不被下半身控製，\\r<br>也不是下半身思考的動物。\\r<br>君子越來越少，小人越來越多，所以君子的婚緣也稀少起來了。\\r<br>時也，命也，勢也', [])\n",
+      "\n",
+      "98\n",
+      "('王局的观点相当客观了，理性思考不带情绪，基于同胞集体利益考虑，真正地在为中国的普罗大众发声。', [])\n",
+      "\n",
+      "99\n",
+      "('王局你好，广州当局终于做了正确决定：最大开放最小影响民众抗疫政策。', [])\n",
+      "\n",
+      "100\n",
+      "('先放寬封控，然後把感染新冠的數據暴增，再然後以此為由重新封控，比之前的封控更嚴。——這就是他們的策略。不信請拭目以待。', [])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter =0\n",
+    "for comment in test_comments:\n",
+    "    counter +=1\n",
+    "    print(counter)\n",
+    "    print(comment)\n",
+    "    print('')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e23e8a5",
+   "metadata": {},
+   "source": [
+    "**News: NYTimes**"
    ]
   },
   {
