--- a/scripts/chinese_data_fetcher.ipynb
+++ b/scripts/chinese_data_fetcher.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05aca0e",
+   "id": "1529f9c3",
    "metadata": {},
    "source": [
     "**Youtube comments**"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a2e65ad0",
+   "id": "8f4e2c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
     "\n",
     "#Get comments\n",
     "\n",
-    "api_key = \"AIzaSyCXD63CDFqA-f4D_bxagkLDRr3-FJc_pn0\"\n",
+    "api_key = \"API key\"\n",
     "  \n",
     "def video_comments(video_id,size):\n",
     "    \n",
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c1b8b2fb",
+   "id": "03fb2e9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b3a52502",
+   "id": "0d012a9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,8 +374,10 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "668b6a97",
-   "metadata": {},
+   "id": "b507d8e0",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
