--- a/scripts/thai_data_fetcher.ipynb
+++ b/scripts/thai_data_fetcher.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "826dae68",
    "metadata": {},
    "outputs": [
@@ -216,16 +216,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2249\n",
-      "2527\n"
+      "2256\n",
+      "2523\n"
      ]
     }
    ],
    "source": [
     "\"\"\"read from existing .json formats\n",
     "uncovered, \n",
-    "2249\n",
-    "2527\n",
+    "2256\n",
+    "2523\n",
     "\"\"\"\n",
     "with open(path+source_file, \"r\") as path_in:\n",
     "    vocab = json.loads(path_in.read())\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "004a939d",
    "metadata": {},
    "outputs": [
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "411c6c9a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1401"
+       "1417"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "bb6ee0f7",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "percent all known= 0.1523972602739726\n"
+      "percent all known= 0.17706821480406387\n"
      ]
     }
    ],
@@ -367,32 +367,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "1fa348ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ทั้งหมดอยู่ในกระบวนการพิจารณา ของ ป.ป.ช. และในส่วนการดำเนินการเหล่านี้ ',\n",
-       " 'นอกจากนี้ รัฐบาลยังได้เพิ่มช่องการรับเรื่องราวร้องเรียน ',\n",
-       " 'ซึ่งในข้อเท็จจริงแล้วหากพรรคเพื่อไทยเป็นรัฐบาล ',\n",
-       " 'นำเทคโนโลยีดิจิทัลเข้ามาช่วยในการบริหารจัดการ ',\n",
-       " 'และนโยบาย National e-Payment เป็นต้น ',\n",
-       " 'ให้มันดีขึ้นเรื่อยๆ อย่างเร็วที่สุด ',\n",
-       " 'วันที่ 9 ธ.ค. 65  พรรคไทยสร้างไทย ',\n",
-       " 'รวมถึงไม่สามารถหางานได้ ',\n",
-       " 'ถ้าทั้งหมดไม่ร่วมกันทำ ',\n",
-       " 'เมื่อมีรายได้มากขึ้น ',\n",
-       " 'ด้วยเหตุไม่มีงานทำ ',\n",
-       " 'มีรายได้จากไหนบ้าง ',\n",
-       " 'มีรายได้มากขึ้น ',\n",
-       " 'สำหรับประเทศไทย ',\n",
-       " 'ตนเองก็ทำไม่ได้ ',\n",
-       " 'ไม่แก้ ']"
+       "['ซึ่งจะเป็นโอกาสที่ดีในด้านการท่องเที่ยวและเป็นการสร้างโอกาสให้พี่น้องประชาชนในพื้นที่ด้วยเช่นกัน ',\n",
+       " 'และให้ตัวแทนพรรคการเมืองได้นำเสนอนโยบายของพรรคในการแก้ไขปัญหาของคนจน ',\n",
+       " 'แพทย์และพยาบาลที่ส่วนใหญ่ทำงานไม่ต่ำกว่า 90 ชั่วโมงต่อสัปดาห์ ',\n",
+       " 'สิทธิของที่ดินทำกิน เป็นสิ่งสำคัญที่รัฐธรรมนูญฉบับนี้ลบหายไป ',\n",
+       " 'ไม่ว่าจะเป็น ชั่วโมงการทำงานไม่เกิน 40 ชั่วโมงต่อสัปดาห์ ',\n",
+       " 'อย่างไรก็ตาม การผลิตอาหารก็ก่อให้เกิดภาวะโลกร้อนเช่นกัน ',\n",
+       " 'จึงเป็นเรื่องยากที่จะตัดสินคำตอบที่ถูกต้องได้ ',\n",
+       " 'เพราะหากมีผู้ไม่พอใจเมื่อไหร่ ก็ยึดอำนาจทันที ',\n",
+       " 'ไม่ใช่ทิ้งปัญหาเก่าไว้เหมือน พล.อ.ประยุทธ์ ',\n",
+       " 'ต้องมีส่วนร่วมในการแก้ไขรัฐธรรมนูญฉบับใหม่ ',\n",
+       " 'ซึ่งปัจจุบันสูงมากถึง 70% ของต้นทุนทั้งหมด ',\n",
+       " 'วันนี้ปัญหาต่างๆ ก็ยังไม่ได้รับการแก้ไข ',\n",
+       " 'เราให้ความสำคัญกับพี่น้องแรงงานอย่างมาก ',\n",
+       " 'โลกร้อนเกี่ยวกับอาหารที่เรากินอย่างไร ',\n",
+       " 'จึงต้องแก้มาตรา 256 ของฉบับปัจจุบัน ',\n",
+       " 'หนึ่งในนั้นคือเรื่องของการลดโลกร้อน ',\n",
+       " 'ทำให้ประชาชนมีคุณภาพชีวิตที่ดีขึ้น ',\n",
+       " 'ไม่ส่งตัวแทนร่วม Dec 11, 2022 ( ',\n",
+       " 'ดังนั้น ควรยกเลิกให้หมดทั้งฉบับ ',\n",
+       " 'เรามีนโยบายเฉพาะในแต่ละพื้นที่ ',\n",
+       " 'รวมทั้งเรื่องการรับประทานอาหาร ',\n",
+       " 'ภาคประชาชนต้องมีส่วนเกี่ยวข้อง ',\n",
+       " 'ซึ่งในอดีตรัฐบาลพรรคไทยรักไทย ',\n",
+       " \"'สุดยอดอาหาร' 5 อย่างในอนาคต \",\n",
+       " 'และตนเป็นผู้คิดชื่อพรรคด้วย ',\n",
+       " 'ดูแลคนทำงานทุกคนในประเทศนี้ ',\n",
+       " 'ย้ำว่า ต้องยกเลิกทั้งฉบับ ',\n",
+       " 'สำหรับรัฐธรรมนูญ ฉบับคนจน ',\n",
+       " 'ต้องให้ ส.ส.เลือกเท่านั้น ',\n",
+       " 'ทุกจังหวัดทุกสาขาวิชาชีพ ',\n",
+       " 'แก้ไขของพรรคไทยสร้างไทย ',\n",
+       " 'เพราะมาตรา 255 และ 256 ',\n",
+       " 'หากวันนี้พรรคเพื่อไทย ',\n",
+       " 'ถือว่ามากที่สุดในโลก ',\n",
+       " 'ควรจะแก้ก็แก้ตรงนั้น ',\n",
+       " 'ถ้าไม่ได้ก็ทีละมาตรา ',\n",
+       " '\"กฎหมายใดที่มีปัญหา ',\n",
+       " 'ต้องเปิดเผยทั้งหมด ',\n",
+       " 'ฝนที่ตกมากขึ้น ',\n",
+       " 'การเลือกนายกฯ ',\n",
+       " 'สิทธิวันหยุด ',\n",
+       " 'สิทธิชุมชน ',\n",
+       " 'เราก็จะทำ\" ',\n",
+       " 'ต้องแก้ไข ',\n",
+       " 'ต้องร่าง ',\n",
+       " 'ทุกมาตรา ',\n",
+       " 'ร่างฯ ',\n",
+       " 'ลดน้ำ ']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +711,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "fe5bce81",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -703,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc51fe64",
+   "id": "9cc3da13",
    "metadata": {},
    "outputs": [],
    "source": [
